<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">安全客户端</string>
    <string name="corp_name">南瑞 NARI</string>
    <string name="cmd_hint">Please enter a test command here.</string>
    
    <string name="menu_about">关于</string>
    <string name="menu_exit">退出</string>
    <string name="menu_reconn">重新连接</string>
    <string name="menu_renego">重新协商</string>
    <string name="btn_ok">确定</string>
    <string name="btn_restart">重新启动</string>
    <string name="btn_stop">停止</string>
    <string name="btn_refresh">刷新</string>
    <string name="btn_save">保存</string>
    <string name="btn_cancel">取消</string>
    <string name="str_addr">网关地址</string>
    <string name="str_port">端口</string>
    <string name="str_algo">加密算法</string>
    <string name="str_comp">压缩算法</string>
    <string name="str_times">重连次数</string>
    <string name="str_interval">重连间隔</string>
        
    <string name="tab_logs">状态</string>
    <string name="tab_stat">统计</string>
    <string name="tab_conf">配置</string>
    
    <string name="about_msg">安全客户端\n
        Version: 1.0a\n
        Build id: 20130110-1011\n
        \n\n
        &#169;Copyright NARI Group Corp 2012, 2013 All rights reserved.\n
        State Grid Electric Power Research Institude\n
        Visit http://www.nari-china.com</string>
        
    <string name="login_msg">请输入密码卡口令</string>
    <string name="invalid_password">密码无效，请重新输入</string>
    <string name="exit_msg">确定要退出安全客户端？\n
        	(如果退出，后台安全服务也将随即退出。)\n</string>
    <string name="save_ok_msg">修改配置保存成功</string>
    <string name="reload_conf_ok_msg">重载配置成功</string>
    <string name="reconnect_ok_msg">重新连接成功</string>
    <string name="renegotiation_ok_msg">重新协商成功</string>
    <string name="revert_msg">取消修改并读取原配置</string>
    <string name="start_msg">服务已启动</string>
    <string name="stop_msg">服务已停止</string>
    <string name="not_yet_started_msg">服务尚未启动</string>
    <string name="online">(在线)</string>
    <string name="offline">(离线)</string>

    <string name="str_stat_login_tm">登陆时间：%1$s\n\n</string>
    <string name="str_stat_up_flow">已上传流量：%1$d bytes\n\n</string>
    <string name="str_stat_dw_flow">已下载流量：%1$d bytes\n\n</string>

	<string-array name="algorithms">
	    <item>SSL_ECC_SM1_SHA1</item>
	    <item>SSL_ECC_SM1_SM3</item>
	    <item>SSL_RSA_SM1_SHA1</item>
	    <item>SSL_RSA_SM1_SM3</item>
	    <item>SSL_ECDHE_SM1_SHA1</item>
	    <item>SSL_ECDHE_SM1_SM3</item>
	    <item>SSL_ECC_AES_SHA1</item>
	    <item>SSL_ECC_AES_SM3</item>
	    <item>SSL_RSA_AES_SHA1</item>
	    <item>SSL_RSA_AES_SM3</item>
	    <item>SSL_ECDHE_AES_SHA1</item>
	    <item>SSL_ECDHE_AES_SM3</item>
	</string-array>
	
	<string-array name="compression">
	    <item>SSL_COMPRESS_NULL</item>
	    <item>SSL_COMPRESS_ZLIB</item>
	</string-array>

</resources>